# cda-telematics

./: ATTRIBUTION.md  Contributing.md  README.md  tox.ini
.circleci/: config.yml
.sonarqube/: sonar-scanner.properties
docs/: ISSUE_TEMPLATE.md  License.md  PULL_REQUEST_TEMPLATE.md
server/: docker-compose.yml
telematic_system/historical_data_processing/rosbag2_processing_service/: .env  Dockerfile  package.xml  pytest.ini
telematic_system/historical_data_processing/rosbag2_processing_service/docker/: checkout.sh  entrypoint.sh  install.sh
telematic_system/historical_data_processing/rosbag2_processing_service/rosbag2_processing_service/: main.py  rosbag_processor.py  service_manager.py
telematic_system/historical_data_processing/rosbag2_processing_service/test/: test_rosbag_processing.py  test_service_manager.py
telematic_system/historical_data_processing/rosbag2_processing_service/test/resources/: mock_mcap.mcap
telematic_system/telematic_units/ros2_nats_bridge/ros2_nats_bridge/: package.xml  setup.py
telematic_system/telematic_units/ros2_nats_bridge/ros2_nats_bridge/config/: params.yaml
telematic_system/telematic_units/ros2_nats_bridge/ros2_nats_bridge/docker/: checkout.sh  install.sh  ros_entrypoint.sh
telematic_system/telematic_units/ros2_nats_bridge/ros2_nats_bridge/launch/: ros2_nats_bridge_launch.py
telematic_system/telematic_units/ros2_nats_bridge/ros2_nats_bridge/ros2_nats_bridge/: api.py  main.py  ros2_nats_bridge.py  ros2_nats_bridge_node.py
telematic_system/telematic_units/ros2_nats_bridge/ros2_nats_bridge/test/: test_prep257.py
(+390 files in other folders)
