<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag2_processing_service</name>
  <version>1.0.0</version>
  <description>rosbag2 processing service</description>
  <maintainer email="carma@carma.com">carma</maintainer>
  <license>BSD</license>

  <depend>rosbag2_py</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>