<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_nats_bridge</name>
  <version>1.0.0</version>
  <description>ros2_nats_bridge package at start time it will publish data from ros topics into nats topics</description>
  <maintainer email="samir.manafzadehtabriz@leidos.com">samir tabriz</maintainer>
  <license>BSD</license>

  <depend>automotive_platform_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
